[package]
name = "iotop"
description = "A Rust implementation of iotop"
license = "MIT"
version = "0.1.4"
edition = "2021"

[[bin]]
name = "iotop"
path = "src/main.rs"

[dependencies]
argh = "0.1"
nix = { version = "0.29", features = ["process", "user"] }
anyhow = { version = "1.0", default-features = false }
crossterm = { version = "0.29.0", features = ["event-stream"] }
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
libc = { version = "0.2", default-features = false }
linux-taskstats = { version = "0.7", features = ["executable"] }
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "sync", "time", "macros"] }
tokio-util = { version = "0.7", default-features = false }
futures = { version = "0.3", default-features = false }

[patch.crates-io]
linux-taskstats = { path = "patches/linux-taskstats" }

[profile.release]
codegen-units = 1
strip = true
lto = true
opt-level = "z"
panic = "abort"