[package]
name = "iotop"
description = "A Rust implementation of iotop"
license = "MIT"
version = "0.1.8"
edition = "2021"

[[bin]]
name = "iotop"
path = "src/main.rs"

[dependencies]
argh = { version = "0.1", default-features = false }
nix = { version = "0.29", default-features = false, features = ["process", "user"] }
anyhow = { version = "1.0", default-features = false }
crossterm = { version = "0.29.0", default-features = false, features = ["event-stream"] }
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
libc = { version = "0.2", default-features = false }
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "sync", "time", "macros"] }
tokio-util = { version = "0.7", default-features = false }
futures = { version = "0.3", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
linux-taskstats = {path = "patches/linux-taskstats", default-features = false }

[profile.release]
codegen-units = 1
strip = true
lto = true
opt-level = "z"
panic = "abort"